<resources>
  <string name="about_info">主页: https://github.com/jinntrance/douban-android <br/> 反馈：<a href="mailto:jinntrance@gmail.com">軒轅鍾書</a></string>
  <string name="about">关于</string>
  <string name="add_chapter_hint">页码或章节名至少填一项～</string>
  <string name="add_chapter">添加页码/章节名</string>
  <string name="add_collection">添加收藏</string>
  <string name="add_first_note">暂无笔记哦！赶紧添加吧～</string>
  <string name="add_note_hint">开始写笔记吧(15字以上哦)…</string>
  <string name="add_note_no_page">暂无第%1$s页笔记哦！赶紧添加吧～</string>
  <string name="add_note">写笔记</string>
  <string name="add_tags">添加标签</string>
  <string name="all">全部</string>
  <string name="annotation_added">添加笔记成功</string>
  <string name="annotation_fails_to_add">添加笔记失败</string>
  <string name="annotation">读书笔记</string>
  <string name="app_name">赌书泼茶</string>
  <string name="app_full_name">赌书泼茶</string>
  <string name="author_intro">作者简介</string>
  <string name="book_cover">图书封面</string>
  <string name="book_detail">图书详情</string>
  <string name="book_name_is">,图书名为: %1$s</string>
  <string name="book_search_hint">书名、作者、ISBN</string>
  <string name="books_loaded_completely">加载完成%1$s本书</string>
  <string name="button_ok">OK</string>
  <string name="cancel">返回</string>
  <string name="catalog_intro">目录</string>
  <string name="chapter">章节名</string>
  <string name="collect_failed">收藏失败</string>
  <string name="collecting">收藏中…</string>
  <string name="collect_date">收藏时间：</string>
  <string name="collect_status">收藏状态：</string>
  <string name="collect_successfully">收藏成功</string>
  <string name="content_intro">内容简介</string>
  <string name="decollect_confirm">"之前的短评将会消失，确定要删除收藏么？"</string>
  <string name="decollect_successfully">成功删除收藏</string>
  <string name="decollect_unsuccessfully">删除收藏失败</string>
  <string name="decollect">删除收藏</string>
  <string name="del_cache_successfully">删除缓存成功</string>
  <string name="delete">删除</string>
  <string name="double_back_to_exit">再次按返回退出</string>
  <string name="edit">编辑</string>
  <string name="exit">退出</string>
  <string name="favorite_search">收藏图书搜索</string>
  <string name="favorite">收藏的书</string>
  <string name="filter_books">筛选图书</string>
  <string name="filter_result">筛选结果</string>
  <string name="from">始</string>
  <string name="end">止</string>
  <string name="isbn_is">,扫描ISBN码为: %1$s</string>
  <string name="load_img_fail">加载%1$s图片失败</string>
  <string name="loading">数据加载中…</string>
  <string name="login_douban">登录豆瓣</string>
  <string name="login_failed">登录失败</string>
  <string name="logining">正在登录</string>
  <string name="login_successfully">登录成功,稍后重启应用生效</string>
  <string name="login">登录</string>
  <string name="logout">注销登录</string>
  <string name="menu_settings">设置</string>
  <string name="more_books_loaded">加载了%1$d本书</string>
  <string name="more_loaded_finished">加载完成</string>
  <string name="more_notes_loaded">加载了%1$d条笔记</string>
  <string name="my_note">我的笔记</string>
  <string name="my_rating">我的评分：</string>
  <string name="my_tags">我的标签：</string>
  <string name="books_not_found">没有找到对应书籍</string>
  <string name="note_length">笔记内容需要15字以上哦..</string>
  <string name="notify_offline">未检测到网络链接，请重新链接网络后再试</string>
  <string name="no">无</string>
  <string name="pages">页码</string>
  <string name="page">页</string>
  <string name="reading">在读</string>
  <string name="reading_brief">在读</string>
  <string name="read">读过</string>
  <string name="reauth_successfully">授权成功,稍后重启应用生效</string>
  <string name="reauth">授权过期，重新获取中…</string>
  <string name="refresh">刷新</string>
  <string name="relogin_needed">认证过期，请重新登录</string>
  <string name="removed_successfully">删除成功</string>
  <string name="removed_unsuccessfully">删除失败</string>
  <string name="review">图书书评</string>
  <string name="saving">正保存到豆瓣帐号…</string>
  <string name="scan_book">扫描图书</string>
  <string name="scan_failed">扫描不成功</string>
  <string name="searching">搜索中…</string>
  <string name="search_no_result">此书未找到</string>
  <string name="search_result">搜索\"%1$s\"的结果</string>
  <string name="search">搜书</string>
  <string name="short_comments">写简短附注,350字内</string>
  <string name="signed_out">成功注销,重启应用中</string>
  <string name="stars">星</string>
  <string name="swipe_to_view_notes">左右滑动翻看笔记</string>
  <string name="swipe_up_to_load">上划获取更多(%1$s/%2$s)</string>
  <string name="tags_hint">添加标签，空格隔开</string>
  <string name="tags_hot">热门标签</string>
  <string name="tags_mine">我的标签</string>
  <string name="to">到</string>
  <string name="waiting_for_auth">等待授权ing，亲操作操作其他先</string>
  <string name="wish">想读</string>
  <string name="clean_cache">删除缓存</string>
  <string name="click_to_add_tags">点此添加标签</string>
  <string name="check_network">请检查网络连接后重试</string>
  <string name="sync_in_2g">2G网络下仍直接发送笔记</string>
  <string name="saved_to_draft">已存草稿，Wifi连接后自动同步</string>
  <string name="toggle_turn_on">是</string>
  <string name="toggle_turn_off">否</string>
  <string name="note_draft">笔记草稿</string>
  <string name="draft_posted">%1$s条笔记已同步</string>
  <string name="remove_note">删除笔记</string>
  <string name="remove_note_confirm">删除笔记后将无法恢复，确认删除？</string>

</resources>
