<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingTop="@dimen/text_huge">

<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
      android:layout_width="match_parent"   android:onClick="delCache"
      android:layout_height="wrap_content" android:clickable="true"
      android:layout_margin="@dimen/margin_medium"
      android:background="@color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean_cache"    style="@style/DoubanTextTitle.Black.Setting"
        android:id="@+id/clean_cache" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"   android:onClick="delCache"
      android:layout_height="wrap_content" android:clickable="true"
      android:layout_margin="@dimen/margin_medium"
      android:background="@color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_weight="1"
        android:text="@string/sync_in_2g"    style="@style/DoubanTextTitle.Black.Setting"
        android:id="@+id/sync_in_2g" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DoubanTextTitle.Black.Setting"
        android:textOn="@string/toggle_turn_on"
        android:textOff="@string/toggle_turn_off"
        android:id="@+id/toggle_sync_in_2g" android:checked="false"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent" android:clickable="true"    android:onClick="about"
      android:layout_height="wrap_content"   android:background="@color/white"
      android:layout_margin="@dimen/margin_medium">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"   style="@style/DoubanTextTitle.Black.Setting"
        android:id="@+id/textView1" />
  </LinearLayout>
  <LinearLayout         android:background="@color/white"
      android:layout_width="match_parent"  android:onClick="toggleLogin"
      android:layout_height="wrap_content"  android:clickable="true"
      android:layout_margin="@dimen/margin_medium"
      android:id="@+id/toggleLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"   style="@style/DoubanTextTitle.Black.Setting"
        android:id="@+id/toggleLoginText" />
  </LinearLayout>
    </LinearLayout>
</FrameLayout>